# internal/app/adapters/primary/http-adapter/controller/methods.go
@@ -2,14 +2,29 @@ package controller
 
 import (
 	"encoding/json"
-	controller_gen "github.com/mkorobovv/full-restaurant/internal/app/adapters/primary/http-adapter/controller-gen"
-	api_service "github.com/mkorobovv/full-restaurant/internal/app/application/api-service"
+	"errors"
 	"log"
 	"net/http"
 	"time"
+
+	controller_gen "github.com/mkorobovv/full-restaurant/internal/app/adapters/primary/http-adapter/controller-gen"
+	api_service "github.com/mkorobovv/full-restaurant/internal/app/application/api-service"
 )
 
 func (ctr *Controller) GetCustomerOrderHistory(w http.ResponseWriter, r *http.Request, customerId int) {
+	history, err := ctr.apiService.GetCustomerOrderHistory(r.Context(), int64(customerId))
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
+
+	err = json.NewEncoder(w).Encode(history)
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
 
 	return
 }
@@ -33,7 +48,32 @@ func (ctr *Controller) GetDishesWithIngredients(w http.ResponseWriter, r *http.R
 }
 
 func (ctr *Controller) GetDishesByIngredients(w http.ResponseWriter, r *http.Request) {
-	return
+	ingredient := r.URL.Query().Get("ingredient")
+	if len(ingredient) == 0 {
+		writeErr(w, errors.New("ingredient mustn't be empty").Error(), http.StatusBadRequest)
+
+		return
+	}
+
+	dishes, err := ctr.apiService.GetDishesByIngredients(r.Context(), ingredient)
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
+
+	if len(dishes) == 0 {
+		writeErr(w, errors.New("dish not found").Error(), http.StatusNotFound)
+
+		return
+	}
+
+	err = json.NewEncoder(w).Encode(dishes)
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
 }
 
 func (ctr *Controller) GetEmployeeOrderCount(w http.ResponseWriter, r *http.Request) {
@@ -94,7 +134,21 @@ func (ctr *Controller) GetExpiringProducts(w http.ResponseWriter, r *http.Reques
 	return
 }
 
-func (ctr *Controller) GetSuppliersForProduct(w http.ResponseWriter, r *http.Request, productName int) {
+func (ctr *Controller) GetSuppliersByProduct(w http.ResponseWriter, r *http.Request, productName string) {
+	suppliers, err := ctr.apiService.GetSuppliersByProduct(r.Context(), productName)
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
+
+	err = json.NewEncoder(w).Encode(suppliers)
+	if err != nil {
+		writeErr(w, err.Error(), http.StatusInternalServerError)
+
+		return
+	}
+
 	return
 }
 
